@@ -28,13 +28,6 @@ Steps to customize your 0 Point theme:
 	height: 50px;
 }
 
-/************************/
-/* HEADER IMAGE ROTATOR */
-/************************/
-.himg #headimg {
-	background: #fff url(headerimg/rotate.php) no-repeat 100% 100%; /* rotates images in the headerimg folder */
-	border-bottom: 1px solid #eee;
-}
 
 /********************/
 /* DROP DOWN SHADOW */
